		-[Core] WebApiRequestLifestyle deprecated. (fixes #331)

	Improvements/Changes:
		-[Core] Removed all methods that were marked [obsolete(true)] since v3.0. (fixes #305)
		-[Core] ThreadScopedLifestyle added to core library as replacement of LifetimeScopeLifestyle. (fixes #299)
		-[Core] AsyncScopedLifestyle added to core library as replacement of ExecutionContextScopeLifestyle. (fixes #299)

	Project Changes:
		-Projects for SimpleInjector.dll merged into one single project.
		-Test projects for SimpleInjector core library merged into one single project.
		-Projects for SimpleInjector.Extensions.ExecutionContextScoping.dll merged into one single project.
		-Projects for SimpleInjector.Extensions.LifetimeScoping.dll merged into one single project.
		-Moved from NUnit to MSTest, since MSTest now supports .NET Core projects and will run cross-platform
		 and NUnit is very unreliable under .NET Core.


Version 3.3.1 (v3.3.1 RTM) 2016-11-23

	Bug fixes:
		-[Core] PredicateContext.Consumer.ServiceType property contained incorrect value when the 
		 parent/consumer of a conditional registration was an open-generic registration. (fixes #333)


Version 3.3.0 (v3.3.0 RTM) 2016-11-21

	Improvements/Changes:
		-[Core] Marked ContainerOptions.ResolveUnregisteredCollections obsolete. (fixes #303)
		-[Core] Removed unneeded dependencies in .NETStandard NuGet release. (fixes #312)
		-[Core] Disabled Dynamic Assembly Compilation by default. (fixes #274)
		-[Core] Added ContainerOptions.DefaultLifestyle property to make it easier to override the default
		 (transient) lifestyle. (fixes #313)
		-[Core] Improved error message in case a registration couldn't be resolved caused by incorrect
		 dynamic assembly loading. (fixes #325)
		-[LifetimeScoping] Marked RegisterLifetimeScope and GetCurrentLifetimeScope obsolete. (fixes #303)
		-[LifetimeScoping] Marked LifetimeScopeLifestyle ctor overloads that allow controlling disposal
		 obsolete. (fixes #307)